--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -35,7 +35,7 @@ exec --no-startup-id nm-applet
 #exec --no-startup-id /usr/lib64/polkit-gnome/polkit-gnome-authentication-agent-1
 
 ########## Keybindings ##########
-#bindsym Mod3+Shift+l exec $HOME/.config/i3/lock # Easier locking
+#bindsym Mod4+Shift+l exec $HOME/.config/i3/lock # Easier locking
 
 ### Backlight ###
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10
@@ -161,7 +161,7 @@ bindsym Mod4+Shift+8 move container to workspace $ws8
 bindsym Mod4+Shift+9 move container to workspace $ws9
 bindsym Mod4+Shift+0 move container to workspace $ws10
 
-workspace_auto_back_and_forth yes
+# workspace_auto_back_and_forth yes
 
 # move container
 bindsym Mod4+z move workspace to output left
