--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -25,7 +25,7 @@ font-0 = "DejaVu Sans Mono for Powerline:size=10;1"
 font-1 = "Font Awesome 5 Free Solid:size=10;1"
 
 modules-left = i3
-modules-center =
+modules-center = date
 modules-right =
 
 
@@ -49,7 +49,7 @@ font-1 = "Font Awesome 5 Free Solid:size=10;1"
 
 modules-left = i3
 modules-center = date
-modules-right = pulseaudio memory cpu temperature battery
+modules-right = memory cpu temperature kubernetes docker pulseaudio battery
 
 tray-position = right
 tray-padding = 2
@@ -62,7 +62,7 @@ label = %title:0:30:...%
 [module/pulseaudio]
 type = internal/pulseaudio
 format-volume = %{A3:$HOME/.config/scripts/sound_swap.sh gui:}<ramp-volume> <label-volume>%{A}
-label-muted =  muted
+label-muted = %{A3:$HOME/.config/scripts/sound_swap.sh gui:} muted%{A}
 label-muted-foreground = #666
 label-volume-underline = #ff92d0
 
@@ -92,6 +92,21 @@ label-unfocused-padding = 1
 label-urgent = %index%
 label-urgent-underline = #ff5555
 label-urgent-padding = 1
+
+[module/docker]
+type = custom/script
+exec = $HOME/.config/scripts/docker_count.sh
+format-prefix = " "
+label-underline = #9aedfe
+label-padding = 1
+
+[module/kubernetes]
+type = custom/script
+exec = $HOME/.config/scripts/k8s_ctx.sh
+format = %{A3:$HOME/.config/scripts/k8s_ctx.sh gui:}<label>%{A}
+format-prefix = " "
+label-underline = #326de6
+label-padding = 1
 
 [module/cpu]
 type = internal/cpu
