--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,13 +1,19 @@
 [global/wm]
 margin-top = 0
+include-file = $HOME/.config/polybar/polybar/themes/latte.ini
 
 [bar/alt]
-include-file = $HOME/.config/polybar/polybar/themes/mocha.ini
 monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 28px
 fixed-center = true
 bottom = true
+
+font-0 = "DejaVu Sans Mono:size=10;1"
+font-1 = "Font Awesome 6 Free Solid:size=10;1"
+font-2 = "Font Awesome 6 Brands Regular:size=10;1"
+
+enable-ipc = true
 
 background = ${colors.base}
 foreground = ${colors.text}
@@ -16,9 +22,6 @@ border-size = 0
 line-size = 2
 padding = 1
 module-margin = 1
-
-font-0 = "DejaVu Sans Mono:size=10;1"
-font-1 = "Font Awesome 6 Free Solid:size=10;1"
 
 modules-left = i3
 modules-center = date
@@ -32,6 +35,10 @@ height = 28px
 fixed-center = true
 bottom = true
 
+font-0 = "DejaVu Sans Mono:size=10;1"
+font-1 = "Font Awesome 6 Free Solid:size=10;1"
+font-2 = "Font Awesome 6 Brands Regular:size=10;1"
+
 enable-ipc = true
 
 background = ${colors.base}
@@ -42,16 +49,14 @@ line-size = 2
 padding = 1
 module-margin = 1
 
-font-0 = "DejaVu Sans Mono:size=10;1"
-font-1 = "Font Awesome 6 Free Solid:size=10;1"
-
-modules-left = i3 xwindow
-modules-center = date privacyguard
+modules-left = i3 spotify spotify-prev spotify-play-pause spotify-next 
+modules-center = dnd date privacyguard
 modules-right = fs memory cpu backlight pulseaudio battery
 
 tray-position = right
 tray-padding = 2
 tray-maxsize = 18
+tray-background = ${colors.base}
 
 [module/xwindow]
 type = internal/xwindow
@@ -81,7 +86,7 @@ label-focused-underline = ${colors.green}
 label-focused-padding = 1
 
 label-visible = %index%
-label-visible-underline = ${colors.crust}
+label-visible-underline = ${colors.green}
 label-visible-padding = 1
 
 label-unfocused = %index%
@@ -156,7 +161,7 @@ type = internal/battery
 time-format = %H:%M 
 battery = BAT0
 adapter = AC
-full-at = 98
+full-at = 95
 
 format-charging = <label-charging>
 
@@ -196,6 +201,40 @@ type = internal/fs
 mount-0 = /home
 label-mounted = %free%
 
+[module/dnd]
+type = custom/ipc
+hook-0 = $HOME/.config/scripts/dnd.sh status
+initial = 1
+click-left = $HOME/.config/scripts/dnd.sh toggle
+
+[module/spotify]
+type = custom/script
+tail = true
+interval = 1
+; prefix symbol is shown before the text
+format-prefix = " "
+format = <label>
+exec = ~/.config/scripts/scroll_spotify_status.sh
+
+[module/spotify-prev]
+type = custom/script
+exec = echo ""
+format = <label>
+click-left = playerctl previous -p spotify
+
+[module/spotify-play-pause]
+type = custom/ipc
+hook-0 = echo ""
+hook-1 = echo ""
+initial = 1
+click-left = playerctl play-pause -p spotify
+
+[module/spotify-next]
+type = custom/script
+exec = echo ""
+format = <label>
+click-left = playerctl next -p spotify
+
 [settings]
-screenchange-reload = true
+screenchange-reload = false
 
